--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-﻿################################################################################
-# This .gitignore file was automatically created by Microsoft(R) Visual Studio.
-################################################################################
-
-/iThesaurus/bin
+﻿packages/angularjs.1.5.6/content/Scripts/i18n/
+iThesaurus*/bin/
+iThesaurus*/obj/
+iThesaurus/Scripts/i18n/
+/packages/
+/iThesaurus/Scripts/thesaurus/node_modules
+/iThesaurus/Scripts/thesaurus/app
