--- a/iThesaurus/Scripts/thesaurus/package.json
+++ b/iThesaurus/Scripts/thesaurus/package.json
@@ -12,6 +12,10 @@
     "angular": "^1.6.1",
     "angular-mocks": "^1.6.1",
     "angular-ui-router": "^0.3.2",
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-uglify": "^2.0.0",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
